--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-heilights">Shafique Portfolio</span> Website</h1>
-    <h3>Geda Web Developer</h3>
-    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+     <section>
+         <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-heilights">Shafique Portfolio</span> Website</h1>
+            <h3>Geda Web Developer</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+         </div>
+         <div class="half-width">
+             <img src="images/jhankar.png" alt="">
+         </div>
+     </section>   
 </body>
 </html>
