--- a/index.html
+++ b/index.html
@@ -12,13 +12,41 @@
      <section class="top-banner">
          <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-heilights">Shafique Portfolio</span> Website</h1>
+            <h1><span class="orange-heilights">Shafique Portfolio</span> Website</h1>
             <h3>Geda Web Developer</h3>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+            <a class="link-button" target="_blank" href="https://web.facebook.com/shafique6694">Hire Me</a>
          </div>
          <div class="half-width">
              <img src="images/jhankar.png" alt="">
          </div>
-     </section>   
+     </section>
+     <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World Big Web Developer</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+            <a class="link-button" target="_blank" href="https://web.facebook.com/shafique6694">DOWNLOAD RESUME</a>
+        </div>
+     </section>
+     <section class="experience-area">
+         <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-heilights">2020-Present | Pro Level Developer</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Poor Web Developer</h2>
+            <h3 class="orange-heilights">2020-2021 | Programming Hero Learner</h3>
+            <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+        </div>
+     </section>
+     <footer>
+         <p>All Rights Reserved.</p>
+     </footer>
 </body>
 </html>
